syntax = "proto3";

import "google/protobuf/empty.proto";

package todo;

service Todo {
    rpc GetAll (google.protobuf.Empty) returns (GetTodosReply);
    rpc GetByUserId (google.protobuf.Empty) returns (GetTodosReply);
    rpc Get (GetTodoRequest) returns (GetTodoReply);
    rpc Put (PutTodoRequest) returns (google.protobuf.Empty);
    rpc Post (PostTodoRequest) returns (google.protobuf.Empty);
    rpc Delete (DeleteTodoRequest) returns (google.protobuf.Empty);
}

message GetTodoRequest {
    string id = 1;
}
    
message GetTodoReply {
    string id = 1;
    string title = 2;
    string description = 3;
    string due_date = 4;
    string status = 5;
    string priority = 6;
}

message GetTodosReply {
    repeated GetTodoReply todos = 1;
}
    
message PostTodoRequest {
    string title = 1;
    string description = 2;
    string due_date = 3;
    string status = 4;
    string priority = 5;
}
    
message PutTodoRequest {
    string id = 1;
    string title = 2;
    string description = 3;
    string due_date = 4;
    string status = 5;
    string priority = 6;
}
    
message DeleteTodoRequest {
    string id = 1;
}