syntax = "proto3";
import "google/protobuf/empty.proto";
option csharp_namespace = "TodoServer";

package TodoList;

service TodoService {
  rpc CreateTodo (TodoItem) returns (TodoItem) {}
  rpc ReadTodo (TodoId) returns (TodoItem) {}
  rpc UpdateTodo (TodoItem) returns (TodoItem) {}
  rpc DeleteTodo (TodoId) returns (Empty) {}
}

message TodoItem {
  int32 id = 1;
  string title = 2;
  string description = 3;
}

message TodoId {
  int32 id = 1;
}

message Empty {}